<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="rate_the_service">Rate the service</string>
    <string name="great_20">Great (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="so_so_15">So-so (15%)</string>
    <string name="round_up_the_tip">Round up the tip?</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip Amount</string>
</resources>